- Option to share wonders among human players in hotseat mode, setting named share_wonders_in_hotseat
- AI routine for "caravan units", which are modded units whose purpose is to be disbanded for shields
  - Controlled by config option enable_caravan_unit_ai
- Delete any AI units that somehow end up off the map to fix a rare crash, setting named delete_off_map_ai_units
- Fix icons for different kinds of specialist yields obscuring each other, setting named fix_overlapping_specialist_yield_icons
- Correct typo in name of share_visibility_in_hotseat setting. The old, incorrect name still works as an alias.

* RELEASE 23
- Include AMB editor
- Option to throttle AI's expansion by temporarily applying perfume to settlers each time it founds a city
  - Controlled by two settings named ai_settler_perfume_on_founding(_duration)
- Disallow trespassing setting kicks trespassers out of each player's territory at the start of their turn and after signing peace
- Option to block the galley chaining exploit by preventing units from loading into two different transports on the same turn
  - Option named limit_unit_loading_to_one_transport_per_turn
- Adjustable rebase range as multiple of operational range, setting named rebase_range_multiplier
- Option not to draw capital cities larger than they really are, named do_not_make_capital_cities_appear_larger
- Fix division by zero in AI logic to evaluate proposed alliances
- Fix possible crash when unit performing stack bombard is destroyed
- Prevent airdrops from violating the trespassing restriction
- Fix city screen zooming out for adjacent tiles that aren't actually workable due to maximum work radius
- Fix empty army movement

* RELEASE 22
- Can adjust the size of the area cities can work
  - Setting named city_work_radius, standard radius is 2, can be set 1 - 7
  - work_area_limit option allows the workable areas to be limited based on cities' cultural levels
- Option do_not_unassign_workers_from_polluted_tiles (off by default)