@@ -740,6 +740,7 @@ repl call, 0x4BF9E1,	0x4C6FA1,	0x4BFA71,	"Sprite_draw_civil_engineer_yield_icon"
 repl call, 0x4BFA45,	0x4C7005,	0x4BFAD5,	"Sprite_draw_police_officer_yield_icon",	""
 inlead,	   0x4B9270,	0x4C08E0,	0x4B9300,	"City_add_building_if_done",			"void (__fastcall *) (City * this)"
 define,	   0x9C34E4,	0x9E5CDC,	0x9C34A4,	"p_zoom_to_city_after_update",			"bool *"
+define,	   0x5812BA,	0x58DFE7,	0x58101A,	"ADDR_PATHFINDER_RECONSTRUCTION_MAX_LEN",	"byte *"
 
 ignore,	   0x4507B0,	0x452860,	0x0,		"Unit_ai_move_offensive_unit",			"void (__fastcall *) (Unit * this)"
 ignore,    0x44C340,	0x0,		0x0,		"Unit_ai_eval_bombard_target",			"int (__fastcall *) (Unit * this, int edx, int tile_x, int tile_y, int param_3)"
