@@ -256,6 +256,11 @@ ai_worker_requirement_percent = 150
 ;   EMPTY ARMY MOVEMENT -- Empty armies have one less than a full move's worth of movement points regardless of how many moves their unit type has set
 ; in the editor. Under the standard game rules, this means they can only move two tiles along roads. The cause is a small mistake in the logic that
 ; attempts to find the slowest member among units in the army. The mod fixes this bug by reimplementing the max movement point calculation for armies.
+;   PREMATURE TRUNCATION OF FOUND PATHS -- If the game attempts to find a path for a unit that's more than 256 tiles long, the path will not be
+; returned properly from the pathfinder. That's because the pathfinder stops reconstructing the final path once it reaches a length of 256. That
+; creates a serious problem for long paths because reconstruction works from the end of the path toward the start, so stopping early produces an
+; incorrect path that begins in the middle. The fix is simply to multiply the maximum length by 10 (to 2560). Removing the limit entirely risks
+; allowing infinite loops. This bug is rarely visible in-game, it usually appears as AI naval units following inappropriate or invalid paths.
 
 patch_submarine_bug = true
 patch_science_age_bug = true
@@ -269,6 +274,7 @@ patch_barbarian_diagonal_bug = true
 patch_disease_stopping_tech_flag_bug = false
 patch_division_by_zero_in_ai_alliance_eval = true
 patch_empty_army_movement = true
+patch_premature_truncation_of_found_paths = true
 
 ; At the beginning of each AI player's turn, deletes any units of theirs that are not on a valid tile. This addresses a rare crash that can occur when
 ; the unit AI invokes the pathfinder for an off-map unit. I don't know how AI units can end up off the map in the first place.
